board creation work

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-dom": "^16.1.0",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2",
-    "redux-form": "^7.1.2"
+    "redux-devtools-extension": "^2.13.2",
+    "redux-form": "^7.1.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
