figure out archiving post

--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "^16.1.0",
+    "react": "^16.2.0",
     "react-dev-utils": "^4.2.1",
     "react-dnd": "^2.5.4",
     "react-dnd-html5-backend": "^2.5.4",
-    "react-dom": "^16.1.0",
+    "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
@@ -67,6 +67,7 @@
     "babel-preset-stage-1": "^6.24.1",
     "eslint": "^4.11.0",
     "eslint-config-google": "^0.9.1",
+    "react-animations": "^1.0.0",
     "styled-components": "^2.2.3"
   },
   "jest": {
